# MAI_OS_Labs

KP/: README.md
KP/doc/: 215_Верменников_КП.docx
KP/src/: CmakeLists.txt  Mckuzi.cpp  Mckuzi.h  Pow2Allocator.cpp  Pow2Allocator.h  main.cpp  straced.txt
Lab1/: README.md
Lab1/doc/: М8О-215Б-23_Верменников_ЛабаN2.docx
Lab1/src/: child  child.cpp  main  main.cpp  straced.txt
Lab2/: README.md
Lab2/doc/: 215_Верменников_Лаб2.docx
Lab2/src/: input.txt  kmeans  kmeans.cpp  output.txt  straced.txt
Lab3/: README.md
Lab3/doc/: М8О-215Б-23_Верменников_ЛабаN3.docx
Lab3/src/: child.cpp  main.cpp  straced.txt
Lab4/: README.md
Lab4/doc/: М8О-215Б-23_Верменников_ЛабаN4.docx
Lab4/src/: Makefile  derivative.h  derivative1.cpp  derivative2.cpp  program1.cpp  program2.cpp  square.h  square1.cpp  square2.cpp  straced.txt
Lab5-7/: README.md
Lab5-7/doc/: 215_Верменников_Лаб5-7.docx
Lab5-7/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  computing  computing.cpp  control  control.cpp  lib.cpp  lib.h
lab8/: 215_Верменников_Лаб8.docx
